# sentinel-edge

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  docker-compose.yml  main.py  plan.md  requirements.txt  roadmap.md
app/api/: router.py
app/core/: database.py  models.py
app/schemas/: anomaly.py
edge/: CMakeLists.txt
edge/include/: preprocess.hpp
edge/src/: preprocess.cpp  rtsp_reader.cpp
infra/docker/: Dockerfile
infra/kafka/: consumer.py  producer.py
